--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ neomodel = "^3.3"
 flask = "^1.0"
 py2neo = "^4.3"
 neo4j = "^1.7"
+flask-rebar = "^1.10.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
